# compibot

./: .env  .gitignore  LICENSE  README.md  chat_bot.py  chatbot.py  chatbot_ui.py  constants.py  indexing.py  pyproject.toml
agents/: agent.py
documents/docs_boto3/: create_trust_anchor.txt  issue_certificate.txt
documents/docs_cyberark/: add_account.txt  add_safe.txt
loaders/: boto3_scraper_loader.py  document_loader.py
schemas/: boto3_loader_type.py
